Create function to send response when button is clicked

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Folie</title>
         <link rel="stylesheet" href="style.css">
+        <script src="script.js" defer></script>
 </head>
 <body>
         <header>
@@ -14,7 +15,7 @@
                 <textarea id="philosophe" name="" cols="50" rows="10"
                         placeholder="Qui êtes-vous ?"></textarea>
                 <input id="submit" type="button" value="Enter" 
-                onclick="return be()">
+                onclick="reponse()">
         </div>
 </body>
 </html>
