Zoom image when clicked

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <h1>FOLIES</h1>
                 <h2>Nul n'entre ici s'il n'est philosophe!</h2>
         </header>
-        <div id="socrate"></div>
+        <div id="socrate" class="original-image"></div>
         <div id="reponse">
                 <textarea id="philosophe" name="" cols="50" rows="10"
                         placeholder="Qui êtes-vous ?"></textarea>
