--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Nul n'entre ici s'il n'est philosophe"
     />
-    <title>Folies</title>
+    <title>Le Cybernaute</title>
   </head>
   <body>
     <div id="root"></div>
